tests/semantic_analysis/error/add_assign.c
add_assign\.c:3:11: error:.*